--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -7,7 +7,18 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
-			
+	
+    <!--往sdcard中写入数据的权限 -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+ 	<!--在sdcard中创建/删除文件的权限 -->
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+    <!-- 此权限用于访问Internet功能 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 此权限用于获取关于网络状态信息的功能 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 获取WIFI状态权限 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />						
+					
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -21,6 +32,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        
+    	<activity android:name="com.innovaee.eorder.mobile.view.FoodsShopActivity" android:label="@string/app_name"
+					android:screenOrientation="portrait"/>
+        
+    	<activity android:name="com.innovaee.eorder.mobile.view.UserOrderActivity" android:label="@string/app_name"
+					android:screenOrientation="portrait"/>
+    	
+   		<activity android:name="com.innovaee.eorder.mobile.view.SettingsActivity" android:label="@string/app_name"
+					android:screenOrientation="portrait"/>
+    				
+    	    		
     </application>
 
 </manifest>
