--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -23,8 +23,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
-        <activity
-            android:name=".mobile.MainActivity"
+        <activity				
+            android:name="com.innovaee.eorder.mobile.view.MainTabActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,7 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        	
         
     	<activity android:name="com.innovaee.eorder.mobile.view.FoodsShopActivity" android:label="@string/app_name"
 					android:screenOrientation="portrait"/>
