--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="13"
         android:targetSdkVersion="21" />
 	
     <!--往sdcard中写入数据的权限 -->
@@ -28,11 +28,12 @@
 	<uses-feature android:name="android.hardware.camera" android:required="false" />
 	<!-- 允许相机没有自动对焦功能的手机使用 -->  
 	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />  					
-												
+														
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/CustomActivityTheme">
         <activity				
             android:name="com.innovaee.eorder.mobile.view.MainTabActivity"
             android:label="@string/app_name" >
@@ -47,7 +48,7 @@
     	<activity android:name="com.innovaee.eorder.mobile.view.ClassifyActivity" android:label="@string/app_name"
 					android:screenOrientation="portrait"/>
         
-    	<activity android:name="com.innovaee.eorder.mobile.view.UserOrderActivity" android:label="@string/app_name"
+    	<activity android:name="com.innovaee.eorder.mobile.view.MyOrderActivity" android:label="@string/app_name"
 					android:screenOrientation="portrait"/>
     	
    		<activity android:name="com.innovaee.eorder.mobile.view.SettingsActivity" android:label="@string/app_name"
@@ -58,8 +59,13 @@
         
         <activity android:name="com.innovaee.eorder.mobile.view.GoodsDetailActivity" android:label="@string/app_name"
                     android:screenOrientation="portrait"/>
-                    
-   				
+         
+        <activity android:name="com.innovaee.eorder.mobile.view.OrderActivity" android:label="@string/app_name"
+                    android:screenOrientation="portrait"/>
+        
+        <activity android:name="com.innovaee.eorder.mobile.view.OrderHestoryActivity" android:label="@string/app_name"
+                    android:screenOrientation="portrait"/>
+   										
     </application>
 
 </manifest>
