--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActivityTheme">
         <activity				
-            android:name="com.innovaee.eorder.mobile.view.MainTabActivity"
+            android:name="com.innovaee.eorder.mobile.view.MainViewActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
