--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -28,11 +28,12 @@
 	<uses-feature android:name="android.hardware.camera" android:required="false" />
 	<!-- 允许相机没有自动对焦功能的手机使用 -->  
 	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />  					
-														
+														              
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.innovaee.eorder.mobile.application.MyApplication"
         android:theme="@style/CustomActivityTheme">
         <activity				
             android:name="com.innovaee.eorder.mobile.view.MainViewActivity"
