--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -67,6 +67,9 @@
         <activity android:name="com.innovaee.eorder.mobile.view.OrderHestoryActivity" android:label="@string/app_name"
                     android:screenOrientation="portrait"/>
    										
+        <activity android:name="com.innovaee.eorder.mobile.view.AboutActivity" android:label="@string/app_name"
+                    android:screenOrientation="portrait"/>
+                
     </application>
 
 </manifest>
