--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -46,7 +46,7 @@
         </activity>
         	
         
-    	<activity android:name="com.innovaee.eorder.mobile.view.ClassifyActivity" 
+    	<activity android:name="com.innovaee.eorder.mobile.view.CategoryActivity" 
     	    		android:label="@string/app_name"
 					android:screenOrientation="portrait"/>
         
