--- a/02_code/android/eOrderMobile/AndroidManifest.xml
+++ b/02_code/android/eOrderMobile/AndroidManifest.xml
@@ -30,7 +30,7 @@
 														              
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:name="com.innovaee.eorder.mobile.application.MyApplication"           
         android:theme="@style/CustomActivityTheme">
@@ -40,7 +40,6 @@
             android:label="@string/app_name" >
             <intent-filter>         
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
