--- a/02_code/web/eorder-ws/pom.xml
+++ b/02_code/web/eorder-ws/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.coderdream</groupId>
+	<groupId>com.innovaee</groupId>
 	<artifactId>eorder-ws</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
@@ -12,25 +12,15 @@
 		<jsr.version>1.0</jsr.version>
 		<asm.version>3.1</asm.version>
 		<jaxb.api.version>2.2.12</jaxb.api.version>
-		<jaxb.impl.version>2.1</jaxb.impl.version>
 		<activation.version>1.1</activation.version>
 		<stax.version>1.0.1</stax.version>
 		<wstx.asl.version>3.2.1</wstx.asl.version>
 		<mysql.version>5.1.17</mysql.version>
-
 		<commons.logging.version>1.1.1</commons.logging.version>
 		<commons.collections.version>3.2.1</commons.collections.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.io.version>1.3.2</commons.io.version>
-		<dbunit.version>2.4.8</dbunit.version>
-
-
 		<hibernate.version>4.3.7.Final</hibernate.version>
-		<hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
-		<hibernate.commons.version>3.3.0.ga</hibernate.commons.version>
-
-
-		<toplink.essentials.version>2.1-60f</toplink.essentials.version>
 	</properties>
 
 	<dependencies>
@@ -47,27 +37,11 @@
 			<version>1.9.2</version>
 		</dependency>
 
-
-		<!-- <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-core</artifactId> 
-			<version>${jersey.version}</version> </dependency> <dependency> <groupId>com.sun.jersey</groupId> 
-			<artifactId>jersey-server</artifactId> <version>${jersey.version}</version> </dependency> 
-			<dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-client</artifactId> 
-			<version>${jersey.version}</version> </dependency> <dependency> <groupId>com.sun.jersey</groupId> 
-			<artifactId>jersey-bundle</artifactId> <version>${jersey.version}</version> </dependency> -->
-
-		<!-- <dependency> <groupId>com.sun.jersey.contribs</groupId> <artifactId>jersey-spring</artifactId> 
-			<version>${jersey.version}</version> </dependency> -->
-
-		<!-- <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-json</artifactId> 
-			<version>${jersey.version}</version> </dependency> -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-
-		<!-- <dependency> <groupId>com.sun.jersey.samples</groupId> <artifactId>jacksonjsonprovider</artifactId> 
-			<version>1.18.2</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -87,22 +61,11 @@
 			<version>2.13</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>javax.ws.rs</groupId> <artifactId>jsr311-api</artifactId> 
-			<version>${jsr.version}</version> </dependency> -->
 		<dependency>
 			<groupId>asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>${asm.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>${jaxb.api.version}</version>
-		</dependency>
-
-		<!-- <dependency> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-impl</artifactId> 
-			<version>${jaxb.impl.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>javax.activation</groupId>
@@ -204,6 +167,7 @@
 			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
