更新注释和测试代码

--- a/02_code/web/eorder/src/main/resources/log4j.properties
+++ b/02_code/web/eorder/src/main/resources/log4j.properties
@@ -1,6 +1,47 @@
+#省略根，只设置特定包的级别和目的地
+
 # Set root category priority to INFO and set its only appender to A1
-log4j.rootCategory                   = INFO, A0
-log4j.logger.com.innovaee.eorder = INFO, A3
+#log4j.rootCategory                   = INFO, A0
+#log4j.logger.com.innovaee.eorder.log4j=DEBUG,A3
+log4j.logger.com.innovaee.eorder.module.service.BaseService=DEBUG,A3
+#log4j.logger.com.innovaee.eorder = INFO, A3
+
+log4j.rootCategory=INFO,CONSOLE,file1,file2,file3
+
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
+log4j.appender.CONSOLE.Threshold=DEBUG 
+#log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.CONSOLE.layout=org.apache.log4j.TTCCLayout 
+#log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p [%t]: %m%n 
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%r [%t] [%p] - %c -%l -%m%n  
+
+log4j.appender.file1=org.apache.log4j.RollingFileAppender 
+log4j.appender.file1.File=debug.log 
+log4j.appender.file1.Append=true 
+log4j.appender.file1.Threshold=DEBUG 
+log4j.appender.file1.MaxFileSize=2000KB 
+log4j.appender.file1.MaxBackupIndex=100 
+log4j.appender.file1.layout=org.apache.log4j.PatternLayout
+log4j.appender.file1.layout.ConversionPattern=%d %-5p [%t]: %m%n 
+
+log4j.appender.file2=org.apache.log4j.RollingFileAppender 
+log4j.appender.file2.File=info.log 
+log4j.appender.file2.Append=true 
+log4j.appender.file2.Threshold=INFO 
+log4j.appender.file2.MaxFileSize=2000KB 
+log4j.appender.file2.MaxBackupIndex=10 
+log4j.appender.file2.layout=org.apache.log4j.PatternLayout 
+log4j.appender.file2.layout.ConversionPattern=%d %-5p [%t] [%l]: %m%n 
+
+log4j.appender.file3=org.apache.log4j.RollingFileAppender 
+log4j.appender.file3.File=error.log 
+log4j.appender.file3.Append=true 
+log4j.appender.file3.Threshold=ERROR
+log4j.appender.file3.MaxFileSize=2000KB 
+log4j.appender.file3.MaxBackupIndex=10 
+log4j.appender.file3.layout=org.apache.log4j.PatternLayout 
+log4j.appender.file3.layout.ConversionPattern=%d %-5p [%t] [%l]: %m%n 
 
 #######################################################################
 # logger setting for Spring
