--- a/02_code/web/eorder_api/pom.xml
+++ b/02_code/web/eorder_api/pom.xml
@@ -20,9 +20,7 @@
         <log4j.version>1.2.17</log4j.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-dbcp.version>1.3</commons-dbcp.version>
-
         <jersey.version>1.18.3</jersey.version>
-        <!-- <jersey.version>2.14</jersey.version> <jackson.jaxrs.version>1.9.13</jackson.jaxrs.version> -->
         <jsr.version>1.1.1</jsr.version>
         <asm.version>3.3.1</asm.version>
         <mysql.jdbc.version>5.1.18</mysql.jdbc.version>
@@ -53,10 +51,7 @@
             <artifactId>persistence-api</artifactId>
             <version>${jpa.version}</version>
         </dependency>
-        <!-- ========Log4j 日志组件依赖======== -->
-        <!-- <dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
-            <version>${log4j.version}</version> </dependency> -->
-
+        <!-- ========slf4j 日志组件依赖======== -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
@@ -181,14 +176,6 @@
             </exclusions>
         </dependency>
 
-        <!-- <dependency> <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-jaxrs</artifactId> 
-            <version>${jackson.jaxrs.version}</version> </dependency> <dependency> <groupId>org.glassfish.jersey.core</groupId> 
-            <artifactId>jersey-server</artifactId> <version>${jersey.version}</version> </dependency> 
-            <dependency> <groupId>org.glassfish.jersey.core</groupId> <artifactId>jersey-client</artifactId> 
-            <version>${jersey.version}</version> </dependency> <dependency> <groupId>org.glassfish.jersey.containers</groupId> 
-            <artifactId>jersey-container-servlet</artifactId> <version>${jersey.version}</version> 
-            </dependency> -->
-
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
@@ -208,7 +195,6 @@
             <version>${jsr.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>asm</groupId>
             <artifactId>asm</artifactId>
@@ -220,12 +206,6 @@
             <artifactId>javassist</artifactId>
             <version>3.18.1-GA</version>
         </dependency>
-
-        <!-- <dependency> <groupId>org.glassfish.grizzly</groupId> <artifactId>grizzly-http-server</artifactId> 
-            <version>${grizzly.http.server.version}</version> </dependency> <dependency> <groupId>org.glassfish.jersey.containers</groupId> 
-            <artifactId>jersey-container-grizzly2-http</artifactId> <version>${jersey.container.grizzly2.http.version}</version> 
-            </dependency> -->
-
     </dependencies>
 
     <build>
