--- a/02_code/web/eorder_api/src/main/webapp/WEB-INF/web.xml
+++ b/02_code/web/eorder_api/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
         <param-name>log4jConfigLocation</param-name>
         <param-value>/WEB-INF/classes/log4j.properties</param-value>
     </context-param>
-    
+
     <filter>
         <filter-name>OpenSessionInViewFilter</filter-name>
         <filter-class>
@@ -27,12 +27,12 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
-    
+
     <filter-mapping>
         <filter-name>OpenSessionInViewFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
+
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
@@ -59,7 +59,7 @@
         <!-- Jersey扫描Service定义所在的包路径 -->
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.innovaee.eorder.api.resource</param-value>
+            <param-value>com.innovaee.eorder.resource</param-value>
         </init-param>
         <!-- 使用JSON作为数据格式时候需要设置为true -->
         <init-param>
