--- a/02_code/web/eorder-ws/src/main/resources/log4j.properties
+++ b/02_code/web/eorder-ws/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stdout.layout.conversionPattern=[%c] %m%n
 
 # appender of system log file
 log4j.appender.syslog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.syslog.file=c:/eorder_api.log
+log4j.appender.syslog.file=c:/eorder-ws.log
 log4j.appender.syslog.layout=org.apache.log4j.PatternLayout
 log4j.appender.syslog.layout.conversionPattern=[%-5p][%d{yy-MM-dd HH:mm:ss}][%m]%n
 
