1. 增加18n字符支持 2. 增加异常类定义 3. 修改UserService/UserDao方法体

--- a/02_code/web/eorder-ws/pom.xml
+++ b/02_code/web/eorder-ws/pom.xml
@@ -33,6 +33,7 @@
     </properties>
 
     <dependencies>
+        <!-- ========Junit依赖======== -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
