update pom file
SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".

--- a/02_code/web/eorder/pom.xml
+++ b/02_code/web/eorder/pom.xml
@@ -49,6 +49,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- 解决 SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder". -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.10</version>
+        </dependency>
+
         <!-- commons-beanutils for Entity layer -->
         <dependency>
             <groupId>commons-beanutils</groupId>
