--- a/02_code/web/eorder-ws/pom.xml
+++ b/02_code/web/eorder-ws/pom.xml
@@ -52,11 +52,16 @@
             <artifactId>persistence-api</artifactId>
             <version>${jpa.version}</version>
         </dependency>
-        <!-- ========slf4j 日志组件依赖======== -->
+        <!-- ========日志组件依赖======== -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.5</version>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.10</version>
         </dependency>
         <!-- ========common-lang 组件依赖======== -->
         <dependency>
@@ -76,7 +81,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.jdbc.version}</version>
         </dependency>
-
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
