--- a/02_code/web/eorder-ws/src/main/resources/log4j.properties
+++ b/02_code/web/eorder-ws/src/main/resources/log4j.properties
@@ -23,3 +23,4 @@ log4j.logger.org.hibernate=ERROR
 log4j.logger.org.hibernate.type=ERROR
 log4j.logger.com.mchange.v2=ERROR
 log4j.logger.com.sun.jersey=ERROR
+log4j.logger.com.innovaee=DEBUG
