--- a/02_code/web/eorder-dish/pom.xml
+++ b/02_code/web/eorder-dish/pom.xml
@@ -49,12 +49,12 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- 解决 SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder". -->
+        <!-- 解决 SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.10</version>
-        </dependency>
+        </dependency>-->
 
         <!-- commons-beanutils for Entity layer -->
         <dependency>
