--- a/02_code/web/eorder-member/src/main/resources/database.properties
+++ b/02_code/web/eorder-member/src/main/resources/database.properties
@@ -18,8 +18,8 @@ hibernate.connection.pool_size=1
 hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 hibernate.current_session_context_class=thread
 hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
-hibernate.show_sql=false
-hibernate.format_sql=false
+hibernate.show_sql=true
+hibernate.format_sql=true
 hibernate.use_sql_comments=false
 hibernate.hbm2ddl.auto=validate
 hibernate.default_batch_fetch_size=100
