implement cash and order

--- a/02_code/web/eorder-order/src/main/resources/log4j.properties
+++ b/02_code/web/eorder-order/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@
 # Set root category priority to INFO and set its only appender to A1
 #log4j.rootCategory                   = INFO, A0
 #log4j.logger.com.innovaee.eorder.log4j=DEBUG,A3
-log4j.logger.com.innovaee.eorder.service.BaseService=DEBUG,A3
+log4j.logger.com.innovaee.eorder.service.BaseService=CONSOLE,DEBUG,A3
 #log4j.logger.com.innovaee.eorder = INFO, A3
 
 log4j.rootCategory=INFO,CONSOLE,file1,file2,file3
